fix: add z-index to header

--- a/client/src/components/header/styles.module.css
+++ b/client/src/components/header/styles.module.css
@@ -8,6 +8,7 @@
   height: 70px;
   width: 100%;
   background-color: var(--primary-color);
+  z-index: 900;
 }
 
 .header + * {
